PMD fix